--- a/proxy/package.json
+++ b/proxy/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "main": "app.js",
   "dependencies": {
-    "http-proxy": "^1.14.0"
+    "http-proxy": "^1.16.2",
+    "etag": "^1.7.0",
+    "path": "^0.12.7"
   }
 }
