--- a/chat/package.json
+++ b/chat/package.json
@@ -8,9 +8,12 @@
     "email": "mengkzhaoyun@gmail.com"
   },
   "dependencies": {
-    "express": "^3.4.4",
-    "swig": "*",
-    "socket.io": "^1.4.5",
-    "stylus": "^0.49.1"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "morgan": "^1.9.0",
+    "serve-favicon": "^2.4.5",
+    "socket.io": "^2.0.4",
+    "stylus": "^0.54.5",
+    "swig": "*"
   }
 }
